// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<td>
  <span
    className="little-spacer-right"
  >
    <QualifierIcon
      qualifier="TRK"
    />
  </span>
  <Connect(Organization)
    organizationKey="org"
  />
  <Link
    className="spacer-right"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "branch": undefined,
          "id": "foo",
        },
      }
    }
  >
    foo
  </Link>
  <TaskType
    type="REPORT"
  />
</td>
`;

exports[`renders 2`] = `
<td>
  <span
    className="note"
  >
    bar
  </span>
  <TaskType
    type="REPORT"
  />
</td>
`;

exports[`renders 3`] = `
<td>
  <span
    className="little-spacer-right"
  >
    <QualifierIcon
      qualifier="TRK"
    />
  </span>
  <Connect(Organization)
    organizationKey="org"
  />
  <Link
    className="spacer-right"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "branch": "feature",
          "id": "foo",
        },
      }
    }
  >
    foo
    <span
      className="text-limited text-text-top"
      title="feature"
    >
      <span
        style={
          Object {
            "marginLeft": 5,
            "marginRight": 5,
          }
        }
      >
        /
      </span>
      feature
    </span>
  </Link>
  <TaskType
    type="REPORT"
  />
</td>
`;
